# ChangeLog for app-emulation/xen-pvgrub
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/ChangeLog,v 1.24 2013/05/20 14:15:45 idella4 Exp $

*xen-pvgrub-4.2.1-r2 (20 May 2013)
*xen-pvgrub-4.2.2 (20 May 2013)

  20 May 2013; Ian Delaney <idella4@gentoo.org>
  +files/xen-4-CVE-2013-0215-XSA-38.patch,
  +files/xen-4-CVE-2013-1919-XSA-46.patch,
  +files/xen-4-CVE-2013-1922-XSA-48.patch,
  +files/xen-4-CVE-2013-1952-XSA-49.patch,
  +files/xen-4-CVE-2013-1952-XSA_49.patch, +xen-pvgrub-4.2.1-r2.ebuild,
  +xen-pvgrub-4.2.2.ebuild, xen-pvgrub-4.2.0-r1.ebuild,
  xen-pvgrub-4.2.1-r1.ebuild:
  rebump with sec. pathces, ditto bump

  19 Feb 2013; Ian Delaney <idella4@gentoo.org> -files/xen-4.2.1-CC.patch,
  files/xen-4.2.1-externals.patch, xen-pvgrub-4.2.1-r1.ebuild:
  upgrades to 4.2.0-r1 mirrored in 4.2.1-r1

  19 Feb 2013; Ian Delaney <idella4@gentoo.org> files/xen-4.2.0-externals.patch,
  xen-pvgrub-4.2.0-r1.ebuild, xen-pvgrub-4.2.1-r1.ebuild:
  4.2.0-externals.patch improved and absorbs -CC.patch, external zlib build
  improved with contribution by Tomoatsu Shimada wrt Bug #455194, overhaul of
  transfer of external packages to source, fixes to build in both arches also
  wrt Bug #455194 after extended testing, -j1 issue remains; all pertain to xen-
  pvgrub-4.2.0-r1

  10 Feb 2013; Ian Delaney <idella4@gentoo.org> +files/xen-4.2.1-CC.patch,
  xen-pvgrub-4.2.1-r1.ebuild:
  Added -CC.patch offered, tested by, and thanks to, Tomoatsu Shimada, Bug
  #455196

  04 Feb 2013; Ian Delaney <idella4@gentoo.org> files/xen-4.2.0-jserver.patch,
  xen-pvgrub-4.2.0-r1.ebuild, xen-pvgrub-4.2.1-r1.ebuild:
  Added -jserver.patch to -4.2.0-r1, fixed build QA issues of Bugs #455194
  #455196 by Ago, extended -jserver.patch

  03 Feb 2013; Agostino Sarubbo <ago@gentoo.org> -xen-pvgrub-4.1.1-r1.ebuild,
  -xen-pvgrub-4.1.2.ebuild, -xen-pvgrub-4.2.0.ebuild:
  Remove old
