@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/xen-pvgrub-4.2.1-r2.ebuild,v 1.1 2013/05/20 14:15:45 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/xen-pvgrub-4.2.1-r2.ebuild,v 1.2 2013/05/23 11:55:57 idella4 Exp $
 
 EAPI=4
 PYTHON_DEPEND="2:2.6"
@@ -27,8 +27,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="custom-cflags"
 
-DEPEND="sys-devel/gettext"
-
+DEPEND="sys-devel/gettext
+	dev-libs/yajl"
 RDEPEND=">=app-emulation/xen-4.2.1"
 
 pkg_setup() {
