@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
 AUX geoip-1.5.0-pkgconfig.patch 161 SHA256 83b97e4b28c23718d1b052bb80fe6f3d84927fda58b053f62f5b2d9447596fe4 SHA512 df9144229b0ee93ebfb065cad8353caec02c0297de3e2d07dd71871a770b30f716819e8a7f30ed93465fd02d8106e0ca2ef04054e4625c15582aa6ca34d4b6b3 WHIRLPOOL 9d7df44769e2d74f6595b70bee59b26c10f8555673cbeac037ecac574a25ec02261dcfb2fdd148f16ba98e5f41336c7e92098afcdbb29fec6acbad53651aee8e
 AUX geoipupdate-r1.sh 746 SHA256 fec9ee8ee72c3d8479c0281005543e69b46993a268657c86f271892da0457cfe SHA512 53e88072a7321d969aeb757e83ce996182e58501d6fa3089ef08695d4fd9d43efd5955ef800215fc2e96529b35d66ed82413e70f11bd5e497b6043ad1646e090 WHIRLPOOL b6df41f0ebab45258c6b50fa0ed25588636514e6dcdeb367260519a3703b72ebcdfb9c69dcdb084dc68f49544e3b38bebeeeb007d91ebe49f79ec5d5436b8718
@@ -11,24 +11,14 @@ DIST GeoIPv6.dat.gz 932782 SHA256 3e83499214f44105c84989fe19fddba1208ed756443835
 DIST GeoLiteCity.dat.gz 12108586 SHA256 e322104ed00676102da1b5e66788a51bfd386447d2422b9cb770bbeb4e36954a SHA512 2503514df4908c1f0ed7a5d43b7f9d58fa25e2e6d6cd984e122a8bf3733f4b9372a4147a1c8678f70b83e518fd0b69a7e162643613a77ccd93d68af201a1497c WHIRLPOOL 12baea7c0a55122dfb72185896c71790f8d1e7b4023bab3594b02ee1ca9781a19bb8ee62b751d69ad6a55186caf6504845d9039598e35a877e200748476e04fa
 DIST GeoLiteCityv6.dat.gz 12962880 SHA256 ab9c4deee7b3ef8bd665db67f2ba312b61d3aeb0233e8b2277f8cfbb9d7f2e6e SHA512 c8b5fde5fc5513ab4f5149e8babe2f1c59a5ff94cb69b8b60eb347ddee42d89b5e93919128240578c2ea263d80191f8afebb21159d5d8dc6c372bb872b8e2cbe WHIRLPOOL b2253e0193b8a47b8a6d9d0fac887a9410d5e361d4be5636c2e5e63fe5123f998f71dbaa89ff7d4bd82dc47f771705878a342598c926b0130585bedeb00e6490
 EBUILD geoip-1.4.8-r3.ebuild 2070 SHA256 1c20af8e8d4e4eae22845dc8aa8c64c9f70bbb5af0b35e3a2a21de942e89c049 SHA512 8d656bed1398cbcfd584bd71ecf552066208d89287fc9e89d8cccba32dbf948f6dff096f414f6fe8ac098e2ff688afe1af1975d8ff42aa186d9c170a07197553 WHIRLPOOL 8f5c09c81255accfc798a6b31fcd764bed0eddc930b51c76b087bc03bb55e3a05e80491a787d50fd09c97108f602a6adfe855ac77c34ef4c808a433ecaba6f07
-EBUILD geoip-1.5.0-r1.ebuild 2106 SHA256 a1bdf3ba6c86c53fe8e2bfed63706704a8b0db97ed7088126b503af456ea129d SHA512 b0767ae28da9af6e99404f2848a4eed251e94e5b55587be433ec60ed6df2efec527e1e910f8c18a81ad96feab31de6af765f22be93333440348cb87d039cba8c WHIRLPOOL a89f9b72f418ea9454680df6c109873db9a9d03701e03cd98fea087936f57f82275c04e34b3cf9c7edf6562a7897f2e5400d4201f8e9fa3a94d833cce22c67bb
-EBUILD geoip-1.5.0.ebuild 2097 SHA256 b5a9b4ccbec6a2ef0a9b5091b83e11204d9d17a39696b556bdc03824af2b1ecc SHA512 25f215303acafb12fb1e187700f3f8e20e84739eb4a0694596ce0c3bbd0e11c844c572ac23231de5f7f56538d1421357df7ed62399de1513ddc1e11089641dd8 WHIRLPOOL 073a1311e0a09dfc8358cf067482dc66d022710c22919e0d725a06a0fd8c108e03c5f451a24324f647dc4c8747465a2e28a422235d17fb779aa6b3426acf7bd8
-MISC ChangeLog 21965 SHA256 d8b81e35163e7c2a4381adca45f9b7bcf7419dafb47e63bd7fb7ceebd809b97e SHA512 d257e5e3d3c703f29f8821d3966e1b3873fc29fc163eb55ddc57b887236b1a8b0045557f59066c8cf5dd536ad343dec61cc4cca314cb7dda7538785abf37b676 WHIRLPOOL 0feab1a25b969de3e3dcd24974334d74f1df1fb82e8072935ce1e306a6e7072a4999ef10ccb05ffc910ee4a780efc3e30ce7229600501d5653383edc42aa6ba7
+EBUILD geoip-1.5.0-r1.ebuild 2116 SHA256 b40e5ec3314c1343ae41f4b45d367163546d2fe2c4e338d3830c6febdca790c9 SHA512 c2d0404c02b6d4529da2eb0ce25a4a33d6134531b2abe71ad90007b6dceb89390ed137db9530dc6cd27749b16e15cd9960a39d8c061007b728afb3df3424aa7b WHIRLPOOL 11ce6ca7558f9e79507df62aad0a71c91a66c246d8d32c24852f0688585d0d496704fe0bd8350679a66e541f75981af2c5b52f91df261ec7095d6310be873632
+EBUILD geoip-1.5.0.ebuild 2107 SHA256 b717881cf39f7014e4ea0e0c52cc5f3577db3aeae5fc58d59c9d5fec1246d19c SHA512 d6b7332bfca4c9e59f5e764eb51a876891582b4fe8763308a66997f6f677ca2cc82c099c6a1c0b277fa955c897b00cb7dc4f9f11d0bcf32fc70c7fee5f07042d WHIRLPOOL 6085aee439302fa2b5571d1397935a89c4b5faab7cc45a065dff0ddbb8b05ea05fae8bb09c6b7168d057e89ff1431f8e915a76985b40a11f828f4a7d91ec0e42
+MISC ChangeLog 22077 SHA256 1f987779f86b85e80c37dc6678a81110c6ee07fa5c714398cd46b13593be8890 SHA512 52aa2b616a84305ecf4423a56e96d7a31d51d55071dbca53535c724064fd4bfa1cc9c3abde7f80e97ab56bc467e24af62b1f28d162d4f1d22bff59f266be5898 WHIRLPOOL b7b5d64792730a79b27b0a58caf1e92c2a3b0c037109f95df896d336b999d9e182ffaa62c9e1e0e3df55a75c5236598e6402fedf38d9ec888f8b1405716d4e5a
 MISC metadata.xml 414 SHA256 1280aa10349cf419f09b873a052d4772b95daf2543c21a29a2d47b327935a551 SHA512 076663380d999ca1bb8c6570b674e150acf39d0b095fabea2a43f1ef1b32c406205eb0c49600fc92791f87d8b8c65fb39e8bd4b76b006a5b7bcef150411bf200 WHIRLPOOL e174135cc0c291d5c38a94f285f1830686d44c380a7d63e6f0b980151bafd91ad952bc44146ae43dbd6e30f967d50c35c49319ec568490eb177ecb0ef8c21bbd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRnJ6+AAoJELp701BxlEWf76YP+wY6vZtQUNjnaIhsT8OJ2Qrl
-AxhSlsK8r4Y5IF9iQaCucllVKjo4XTqD2TTA0MYfrQ+SanG0cvqIBA3Is+IZPn5u
-SlTg2DruwvD5AYctP1uYKFU9ptPaEpzwrm3h1rv3J9cVgKy7tug902Qau+tREFyw
-Bb9qbK9o5btOLedpvsbkLsuI2qzlNCEthhRUzipFwQQc2+VSEcLDde4nNAoMBXgH
-0wuBCuIJIpdxucdSzp5CSfSQsgHH0stbet0d9AzKPqgHkXiR/OEyHnhGacMKUHq9
-Vzne7V9wbuEbnxwM89xymHcAgbDDv2nzrSW9v0zrDhL+IDGIwz0iLRzobrE606SB
-i8DY23WlWaN6WXbzUKIxHhI9zY6TgfppEFT0duayo7i3cesXAHRmY9LLNVBAQ8fu
-Knw/ikoIm5tkuSKQ1vXLdrmEbH9p6fnR8MgrIJn89MLpg4CEkV/uViUoWNfKJSYb
-N6RIWm9ogmNNPsT0Zqre/VfnGD3ObjAU/We9YSWW5MU+qN4G9rdqp3VJ9pYKFh6c
-DbZWygf5nFCQOeWYWE2K7qwhAvmBVs9FufR8qA3VPb3ENVJTuLvR9oUkVYoYGMZY
-g1ScxwNFSS2FRLxhmMpvSb/tUWusLY4Sy11hlsBJF+UV0/HO4ew+D/N+jwIYuQJ6
-Fcc6ndjA7vyGB1SOiS8D
-=1Bse
+iEYEAREIAAYFAlGdDN8ACgkQVWmRsqeSphOzkwCbB+o+trHTeanvo/WcFTlJLIV3
+ex0An3TxzUhgCTS61YC+U9ixUZeGhiur
+=6DO8
 -----END PGP SIGNATURE-----
