@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/geoip
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.181 2013/05/22 10:35:16 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/geoip/ChangeLog,v 1.182 2013/05/22 18:22:22 jer Exp $
+
+  22 May 2013; Jeroen Roovers <jer@gentoo.org> geoip-1.5.0-r1.ebuild,
+  geoip-1.5.0.ebuild:
+  Update HOMEPAGE.
 
   22 May 2013; Agostino Sarubbo <ago@gentoo.org> geoip-1.5.0.ebuild:
   Stable for ia64, wrt bug #470386
