@@ -1,6 +1,10 @@
 # ChangeLog for app-emulation/xen-pvgrub
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/ChangeLog,v 1.24 2013/05/20 14:15:45 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/xen-pvgrub/ChangeLog,v 1.25 2013/05/23 11:55:57 idella4 Exp $
+
+  23 May 2013; Ian Delaney <idella4@gentoo.org> xen-pvgrub-4.2.0-r1.ebuild,
+  xen-pvgrub-4.2.1-r1.ebuild, xen-pvgrub-4.2.1-r2.ebuild:
+  Add jajl to DEPEND, fixes Bug #471008' by ago
 
 *xen-pvgrub-4.2.1-r2 (20 May 2013)
 *xen-pvgrub-4.2.2 (20 May 2013)
